service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-svc
  namespace: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
